# fm_data_tasks

./: .gitignore  README.md  pyproject.toml
fm_data_tasks/utils/: constants.py
scripts/: prepare_folktables.py
